--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@hyperapp/events": "^0.0.3",
     "@hyperapp/html": "^1.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "hyperapp": "^2.0.1"
+    "hyperapp": "^2.0.1",
+    "hyperapp-fx": "^2.0.0-beta.1"
   }
 }
